Add map and geolocation

--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 		<section id="app">
 			<header id="header">
 			</header>
+			<main>
+				<div id="map" class="map"></div>
+			</main>
 		</section>
-		
+
 		<footer id="footer">
 		</footer>
 
 		<script type="text/template">
 		</script>
 
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA68aP7Kb1Sd67e2oaCVDT2IkvCGuVezQI&callback=initMap"></script>
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/underscore/underscore.js"></script>
 		<script src="node_modules/backbone/backbone.js"></script>
