--- a/index.html
+++ b/index.html
@@ -1,32 +1,51 @@
 <!doctype html>
 <html lang="en" data-framework="backbonejs">
-	<head>
-		<meta charset="utf-8">
-		<title>Neighborhoods</title>
-		<link rel="stylesheet" href="node_modules/reset-css/reset.css" />
-		<link rel="stylesheet" href="styles/app.css">
-	</head>
-	<body>
-		<section id="app">
-			<header id="header">
-			</header>
-			<main>
-				<div id="map" class="map"></div>
-			</main>
-		</section>
 
-		<footer id="footer">
-		</footer>
+<head>
+	<meta charset="utf-8">
+	<title>Neighborhoods</title>
+	<link rel="stylesheet" href="node_modules/reset-css/reset.css" />
+	<link rel="stylesheet" href="styles/app.css">
+</head>
 
-		<script type="text/template">
-		</script>
+<body>
+	<main id="app">
+		<div id="map" class="map"></div>
+		<input type="text" id="input" class="name-input">
 
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA68aP7Kb1Sd67e2oaCVDT2IkvCGuVezQI&callback=initMap"></script>
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="node_modules/underscore/underscore.js"></script>
-		<script src="node_modules/backbone/backbone.js"></script>
-		<script src="js/views/app-view.js"></script>
-		<script src="js/routers/router.js"></script>
-		<script src="js/app.js"></script>
-	</body>
+		<div id="panel" class="panel">
+			<button id="add-btn" class="add-btn btn">Add a new place</button>
+			<label id="label" class="panel-label">Click on the map to add a place</label>
+			<ul id="places-list"></ul>
+		</div>
+	</main>
+
+	<footer id="footer">
+	</footer>
+
+	<script type="text/template" id="item-template">
+		<div class="item">
+			<span><%- title %></span>
+			<!--<button class="edit-btn btn"></button>
+			<button class="destroy-btn btn"></button>-->
+		</div>
+		<!--<input class="edit" value="<%- title %>">-->
+	</script>
+
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA68aP7Kb1Sd67e2oaCVDT2IkvCGuVezQI&callback=initMap"></script>
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="node_modules/underscore/underscore.js"></script>
+	<script src="node_modules/backbone/backbone.js"></script>
+	<script src="node_modules/backbone.localstorage/backbone.localStorage.js"></script>
+
+	<script src="js/models/place.js"></script>
+	<script src="js/collections/places.js"></script>
+	<script src="js/views/app-view.js"></script>
+	<script src="js/views/map-view.js"></script>
+	<script src="js/views/place-view.js"></script>
+	<script src="js/routers/router.js"></script>
+	<script src="js/app.js"></script>
+</body>
+
 </html>
