--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 		<!--<input class="edit" value="<%- title %>">-->
 	</script>
 
-	<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA68aP7Kb1Sd67e2oaCVDT2IkvCGuVezQI&callback=initMap"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA68aP7Kb1Sd67e2oaCVDT2IkvCGuVezQI"></script>
 	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<script src="node_modules/underscore/underscore.js"></script>
 	<script src="node_modules/backbone/backbone.js"></script>
