Add styles for list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="panel" class="panel">
 			<button id="add-btn" class="add-btn btn">Add a new place</button>
 			<label id="label" class="panel-label">Click on the map to add a place</label>
-			<ul id="places-list"></ul>
+			<ul id="places-list" class="places-list"></ul>
 		</div>
 	</main>
 
