Add routing and focusing on marker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<script type="text/template" id="item-template">
 		<div class="item">
-			<span><%- title %></span>
+			<a href="#<%- id %>"><%- title %></a>
 			<!--<button class="edit-btn btn"></button>
 			<button class="destroy-btn btn"></button>-->
 		</div>
