Highlight current link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</footer>
 
 	<script type="text/template" id="item-template">
-		<div class="item">
+		<div class="item <%- selected ? 'active' : '' %>">
 			<a href="#<%- id %>"><%- title %></a>
 			<!--<button class="edit-btn btn"></button>
 			<button class="destroy-btn btn"></button>-->
